# fullstack-rust-app

./: .env  Cargo.toml  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20230627173711_init.down.sql  20230627173711_init.up.sql
backend/src/: handler.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  tailwind.config.js
frontend/src/: api.rs
frontend/src/components/: mod.rs
