[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.1"
reqwasm = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
uuid = { version = "1.4.0", features = ["serde", "v4", "js"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "Window"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.3"
common = { version = "0.1.0", path = "../common" }
